# OpenGL_test

./: CMakeLists.txt  Readme.md
headers/: shader.hpp
resources/models/BattleFury/: license.txt  scene.gltf
resources/models/Construction/: license.txt  scene.gltf
shaders/: 3.3.shader.fs  3.3.shader.vs  4.2.texture.fs  5.1.transform.fs  7.3.camera.fs  7.3.camera.vs
src/: main.cpp  shader.cpp
